--- a/material/app/src/main/res/layout/activity_main.xml
+++ b/material/app/src/main/res/layout/activity_main.xml
@@ -11,25 +11,27 @@
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"
-            android:id="@+id/textInputLayout" android:layout_marginStart="8dp"
-            android:layout_marginEnd="8dp" android:layout_marginBottom="20dp">
+            android:id="@+id/textInputLayout" android:layout_marginStart="24dp"
+            android:layout_marginEnd="24dp" android:layout_marginBottom="20dp">
 
         <com.google.android.material.textfield.TextInputEditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Username"/>
+                android:hint="Username" android:singleLine="true"/>
     </com.google.android.material.textfield.TextInputLayout>
     <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content" app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_marginTop="8dp" app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginStart="8dp"
+            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="24dp" android:layout_marginStart="24dp"
+            app:endIconMode="password_toggle"
             android:id="@+id/textInputLayout2">
 
         <com.google.android.material.textfield.TextInputEditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:inputType="textPassword"
                 android:hint="Password"/>
     </com.google.android.material.textfield.TextInputLayout>
     <Button
@@ -37,17 +39,20 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content" android:id="@+id/button4"
             app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"/>
+            android:layout_marginEnd="128dp" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="128dp"
+            app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="40dp"
+            app:layout_constraintTop_toBottomOf="@+id/textView2"/>
     <TextView
             android:text="Forgot Credentials?"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintEnd_toEndOf="parent"
-            android:id="@+id/textView2" android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/button4" android:layout_marginEnd="8dp"
-            android:textColor="#0D47A1 "/>
+            android:id="@+id/textView2"
+            android:layout_marginEnd="24dp"
+            android:textColor="#0D47A1 "
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"/>
     <TextView
             android:text="Need an account? "
             android:layout_width="wrap_content"
