--- a/material/app/src/main/res/layout/activity_main.xml
+++ b/material/app/src/main/res/layout/activity_main.xml
@@ -8,11 +8,13 @@
     <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content" app:layout_constraintTop_toTopOf="parent"
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
+            app:startIconDrawable="@android:drawable/ic_secure"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"
             android:id="@+id/textInputLayout" android:layout_marginStart="24dp"
-            android:layout_marginEnd="24dp" android:layout_marginBottom="20dp">
+            android:layout_marginEnd="24dp" android:layout_marginBottom="20dp"
+    >
 
         <com.google.android.material.textfield.TextInputEditText
                 android:layout_width="match_parent"
@@ -22,7 +24,8 @@
     <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content" app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
+            app:startIconDrawable="@android:drawable/ic_secure"
             android:layout_marginTop="8dp" app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="24dp" android:layout_marginStart="24dp"
             app:endIconMode="password_toggle"
@@ -38,11 +41,10 @@
             android:text="Login"
             android:layout_width="0dp"
             android:layout_height="wrap_content" android:id="@+id/button4"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="128dp" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="128dp"
-            app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="40dp"
-            app:layout_constraintTop_toBottomOf="@+id/textView2"/>
+            android:layout_marginTop="40dp"
+            app:layout_constraintTop_toBottomOf="@+id/textView2" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="48dp" app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="48dp"/>
     <TextView
             android:text="Forgot Credentials?"
             android:layout_width="wrap_content"
@@ -73,19 +75,33 @@
             app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintEnd_toEndOf="parent"
             android:textColor="#0D47A1 "/>
-    <androidx.cardview.widget.CardView android:layout_width="wrap_content"
-                                       android:layout_height="wrap_content">
-
-    </androidx.cardview.widget.CardView>
     <de.hdodenhof.circleimageview.CircleImageView
-            android:layout_width="200dp"
-            android:layout_height="200dp" app:srcCompat="@android:drawable/sym_def_app_icon"
+            android:layout_width="150dp"
+            android:layout_height="150dp" app:srcCompat="@android:drawable/sym_def_app_icon"
             android:elevation="4dp"
             android:id="@+id/imageView"
             android:src="@drawable/image"
             app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
-            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginTop="32dp"
+            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginTop="16dp"
             app:layout_constraintTop_toTopOf="parent"
             tools:srcCompat="@tools:sample/backgrounds/scenic[16]" android:alpha=".7"
             android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/textInputLayout"/>
+    <TextView
+            android:text="G E N E R I C"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/textView6" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
+            android:textStyle="bold|italic" android:textSize="16sp" android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toTopOf="@+id/imageView" android:fontFamily="monospace"/>
+    <TextView
+            android:text="D E S I G N "
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/textView7"
+            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
+            android:textStyle="bold|italic" android:textSize="16sp"
+            android:fontFamily="monospace"
+            app:layout_constraintTop_toBottomOf="@+id/imageView" android:layout_marginStart="8dp"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="8dp"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
