--- a/material/app/src/main/res/layout/activity_main.xml
+++ b/material/app/src/main/res/layout/activity_main.xml
@@ -41,20 +41,21 @@
             android:text="Login"
             android:layout_width="0dp"
             android:layout_height="wrap_content" android:id="@+id/button4"
-            android:layout_marginTop="40dp"
-            app:layout_constraintTop_toBottomOf="@+id/textView2" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginTop="24dp"
+            app:layout_constraintTop_toBottomOf="@+id/checkBox" app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="48dp" app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="48dp"/>
     <TextView
             android:text="Forgot Credentials?"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintEnd_toEndOf="parent"
             android:id="@+id/textView2"
-            android:layout_marginEnd="24dp"
             android:textColor="#0D47A1 "
-            android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"/>
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp"
+            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/button4"/>
     <TextView
             android:text="Need an account? "
             android:layout_width="wrap_content"
@@ -95,7 +96,7 @@
             android:textStyle="bold|italic" android:textSize="16sp" android:layout_marginBottom="8dp"
             app:layout_constraintBottom_toTopOf="@+id/imageView" android:fontFamily="monospace"/>
     <TextView
-            android:text="D E S I G N "
+            android:text="L O G O "
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/textView7"
@@ -104,4 +105,13 @@
             android:fontFamily="monospace"
             app:layout_constraintTop_toBottomOf="@+id/imageView" android:layout_marginStart="8dp"
             app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="8dp"/>
+    <CheckBox
+            android:text="BIOMETRICS"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/checkBox"
+            android:theme="@style/CheckboxFillColor"
+            app:layout_constraintTop_toBottomOf="@+id/textInputLayout2" app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="24dp"
+            android:textSize="12sp"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
