--- a/material/app/src/main/res/values/styles.xml
+++ b/material/app/src/main/res/values/styles.xml
@@ -1,11 +1,10 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
-        <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
+    <style name="AppTheme" parent="Theme.MaterialComponents.Light.NoActionBar">
     </style>
 
+    <style name="CheckboxFillColor" parent="Theme.MaterialComponents.Light.NoActionBar">
+        <item name="colorAccent">#0D47A1</item>
+    </style>
 </resources>
