--- a/material/app/src/main/res/layout/activity_main.xml
+++ b/material/app/src/main/res/layout/activity_main.xml
@@ -61,27 +61,30 @@
                 android:layout_marginStart="8dp"
                 android:layout_marginEnd="8dp"
                 app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="8dp"
-                app:layout_constraintTop_toBottomOf="@+id/btn_login"/>
+                app:layout_constraintTop_toBottomOf="@+id/btn_login" android:paddingBottom="12dp"
+                android:paddingTop="8dp" android:paddingStart="12dp" android:paddingEnd="12dp"/>
         <TextView
                 android:text="@string/need_an_account"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/tv_need"
-                android:layout_marginBottom="24dp"
+                android:layout_marginBottom="16dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintEnd_toStartOf="@+id/tv_register"
-                app:layout_constraintHorizontal_chainStyle="packed"/>
+                app:layout_constraintHorizontal_chainStyle="packed" android:paddingBottom="12dp"
+                android:paddingTop="12dp"/>
         <TextView
                 android:text="@string/register_now"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/tv_register" app:layout_constraintStart_toEndOf="@+id/tv_need"
-                android:layout_marginBottom="24dp"
+                android:layout_marginBottom="16dp"
                 app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintEnd_toEndOf="parent"
-                android:textColor="#0D47A1 "/>
+                android:textColor="#0D47A1 " android:paddingBottom="12dp"
+                android:paddingTop="12dp"/>
         <de.hdodenhof.circleimageview.CircleImageView
                 android:layout_width="150dp"
                 android:layout_height="150dp" app:srcCompat="@android:drawable/sym_def_app_icon"
