--- a/material/app/src/main/res/layout/activity_main.xml
+++ b/material/app/src/main/res/layout/activity_main.xml
@@ -60,7 +60,7 @@
                 app:layout_constraintStart_toStartOf="parent"
                 android:layout_marginStart="8dp"
                 android:layout_marginEnd="8dp"
-                app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="8dp"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/btn_login" android:paddingBottom="12dp"
                 android:paddingTop="8dp" android:paddingStart="12dp" android:paddingEnd="12dp"/>
         <TextView
@@ -117,13 +117,22 @@
                 app:layout_constraintTop_toBottomOf="@+id/iv_logo" android:layout_marginStart="8dp"
                 app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="8dp"/>
         <CheckBox
-                android:text="@string/biometrics"
+                android:text="@string/remember_me"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/cb_biometrics"
                 android:theme="@style/CheckboxFillColor"
-                app:layout_constraintTop_toBottomOf="@+id/til_password" app:layout_constraintEnd_toEndOf="parent"
-                android:layout_marginEnd="24dp"
+                app:layout_constraintTop_toBottomOf="@+id/til_password"
+                android:textSize="12sp" android:layout_marginStart="24dp"
+                app:layout_constraintStart_toStartOf="parent"/>
+        <TextView
+                android:text="@string/biometrics"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:drawableLeft="@android:drawable/ic_secure"
+                android:drawablePadding="6dp"
+                android:id="@+id/textView3" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="24dp"
+                android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/til_password"
                 android:textSize="12sp"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
     <include layout="@layout/bottom_sheet_main"/>
