[graphql] Clear the backstack on backing to login

--- a/graphql/app/src/main/res/navigation/app_nav_graph.xml
+++ b/graphql/app/src/main/res/navigation/app_nav_graph.xml
@@ -18,5 +18,11 @@
         android:id="@+id/mainFragment"
         android:name="com.kursivee.graphql.ui.main.MainFragment"
         android:label="main_fragment"
-        tools:layout="@layout/main_fragment" />
+        tools:layout="@layout/main_fragment" >
+        <action
+            android:id="@+id/action_mainFragment_to_loginFragment"
+            app:destination="@id/loginFragment"
+            app:popUpTo="@id/loginFragment"
+            app:popUpToInclusive="true" />
+    </fragment>
 </navigation>
