--- a/graphql/app/src/main/res/layout/login_fragment.xml
+++ b/graphql/app/src/main/res/layout/login_fragment.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".auth.presentation.LoginFragment">
+    tools:context=".login.presentation.LoginFragment">
 
 
     <Button
